--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
   "author": "Patrick Frank",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.8.4",
+    "@babel/core": "^7.16.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
-    "babel-loader": "^8.0.6",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/preset-react": "^7.16.5",
+    "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
@@ -50,7 +51,12 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-app": "^3.1.2",
     "express": "^4.17.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "regenerator-runtime": "^0.13.9"
   }
 }
